all exception asserts